portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.3-10.build.log
15:15:04 **** Build of configuration Debug for project ex.3-10 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.3-10.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.3-10.d" -MT"ex.3-10.o" -o "ex.3-10.o" "../ex.3-10.cpp"
../ex.3-10.cpp:10:7: error: using declaration requires a qualified name
using spacename std;
      ^
../ex.3-10.cpp:10:16: error: expected ';' after using declaration
using spacename std;
               ^
               ;
../ex.3-10.cpp:17:2: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
        cout << "<C1><A4><BC><F6> 2<B0><B3> <C0>ни<C2> : ";
        ^~~~
        std::cout
/Library/Developer/CommandLineTools/usr/include/c++/v1/iostream:54:33: note: 'std::cout' declared here
extern _LIBCPP_FUNC_VIS ostream cout;
                                ^
../ex.3-10.cpp:17:11: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
        cout << "<C1><A4><BC><F6> 2<B0><B3> <C0>ни<C2> : ";
                 ^~~~~~~~~~~~~~~~  ~~~~~~~~ ~~~~ ~~~~
../ex.3-10.cpp:18:2: error: use of undeclared identifier 'cin'; did you mean 'std::cin'?
        cin >> Num1 >> Num2;
        ^~~
        std::cin
/Library/Developer/CommandLineTools/usr/include/c++/v1/iostream:50:33: note: 'std::cin' declared here
extern _LIBCPP_FUNC_VIS istream cin;
                                ^
1 warning and 4 errors generated.
make: *** [ex.3-10.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:15:05 Build Failed. 5 errors, 1 warnings. (took 789ms)

